multilanguage switch button and OSM added

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -19,7 +19,7 @@
         },
         "contact": {
             "title": "contact us",
-            "text": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam corrupti molestias itaque facere sit quaerat ex tempora, voluptatem iste debitis magnam eum alias libero expedita hic!",
+            "text": "For bulk purchases and more information please contact us.",
             "form": {
                 "title": "leave us a message",
                 "namePlaceholder": "name...",
