--- a/public/assets/i18n/fr.json
+++ b/public/assets/i18n/fr.json
@@ -19,7 +19,7 @@
         },
         "contact": {
             "title": "nous contacter",
-            "text": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam corrupti molestias itaque facere sit quaerat ex tempora, voluptatem iste debitis magnam eum alias libero expedita hic!",
+            "text": "Pour des achats en gros et plus d’informations, veuillez nous contacter.",
             "form": {
                 "title": "laissez-nous un message",
                 "namePlaceholder": "nom...",
