--- a/public/assets/i18n/bg.json
+++ b/public/assets/i18n/bg.json
@@ -3,6 +3,7 @@
     "containers": {
         "header": {
             "homeLink": "начало",
+            "honeyLink": "пчелен мед",
             "aboutLink": "за нас",
             "contactLink": "контакт",
             "testLink": "тест"
@@ -11,7 +12,10 @@
     "pages": {
         "home": {
             "title": "Знаете ли че?",
-            "text": "Пчелите общуват чрез своите движения.\nПчелите общуват помежду си чрез физически движения като да движат задната си част, за които изследователите казват, че могат да означават &quot;стоп&quot;, и да наподобяват танци, с които могат да сигнализират къде е гнездото, според Live Science. \nПчелната майка може да живее до пет години. С продължителност на живота до пет години, пчелните майки живеят далеч по-дълго от пчелите-работнички или медоносните пчели. Работничките, например, живеят само пет или шест седмици. \nПчелата майка дава до 2000 яйца на ден. \nТя е единствената плодовита женска в кошера и може да полага до 2000 яйца дневно. \nВсяка пчела-работничка прави съвсем малко количество мед в живота си. \nЕдна пчела-работничка прави средно само една дванадесета от една чаена лъжичка мед през целия си живот. \nПчелите произвеждат не само мед. \nПчелите произвеждат редица вещества, освен мед. Те отделят пчелен восък от коремните жлези и го използват за изграждане на медена пита. Също така създават &quot;пчелен хляб&quot;, или годен за консумация прашец, който е смес от цветен прашец и мед. Те също правят лепкавото и много полезно вещество, наречено прополис. \nПчелите-работнички могат да летят с до 32 км/ч."
+            "text": "Пчелите общуват чрез своите движения.\nПчелите общуват помежду си чрез физически движения като да движат задната си част, за които изследователите казват, че могат да означават \"стоп\", и да наподобяват танци, с които могат да сигнализират къде е гнездото, според Live Science. \nПчелната майка може да живее до пет години. С продължителност на живота до пет години, пчелните майки живеят далеч по-дълго от пчелите-работнички или медоносните пчели. Работничките, например, живеят само пет или шест седмици. \nПчелата майка дава до 2000 яйца на ден. \nТя е единствената плодовита женска в кошера и може да полага до 2000 яйца дневно. \nВсяка пчела-работничка прави съвсем малко количество мед в живота си. \nЕдна пчела-работничка прави средно само една дванадесета от една чаена лъжичка мед през целия си живот. \nПчелите произвеждат не само мед. \nПчелите произвеждат редица вещества, освен мед. Те отделят пчелен восък от коремните жлези и го използват за изграждане на медена пита. Също така създават \"пчелен хляб\", или годен за консумация прашец, който е смес от цветен прашец и мед. Те също правят лепкавото и много полезно вещество, наречено прополис. \nПчелите-работнички могат да летят с до 32 км/ч."
+        },
+        "honey": {
+            "title": "пчелен мед"
         },
         "about": {
             "title": "за нас",
