get API data on language change fixed

--- a/client/public/assets/i18n/bg.json
+++ b/client/public/assets/i18n/bg.json
@@ -18,6 +18,18 @@
         "honey": {
             "title": "пчелен мед"
         },
+        "detail": {
+            "reviews": "вижте {{reviewsNumber}} ревюта",
+            "package": {
+                "S": "буркан {{size}} гр.",
+                "M": "буркан {{size}} гр.",
+                "L": "буркан {{size}} гр."
+            },
+            "addToCart": "добави в количката",
+            "addToWishList": "добави в любими",
+            "smallDiscount": "възползвайте се от 5% отстъпка върху пакета от 3 буркана по 250 гр. (цената е с включено намаление).",
+            "bigDiscount": "възползвайте се от 10% отстъпка върху пакета от 2 буркана по 500 гр. (цената е с включено намаление)."
+        },
         "about": {
             "title": "за нас",
             "text": "За да се гарантира органичен мед, екипите на Beaumiel извършват множество лабораторни анализи."
