validators added in sign & contact forms

--- a/client/public/assets/i18n/bg.json
+++ b/client/public/assets/i18n/bg.json
@@ -68,7 +68,8 @@
                 "buttonText": "регистрирай"
             },
             "haveAccount": "вече имате профил?",
-            "signinHere": "влезте тук"
+            "signinHere": "влезте тук",
+            "reqFields": "задължителни полета"
         },
         "notFound": {
             "title": "грешка 404: страницата не е намерена",
