--- a/client/public/assets/i18n/fr.json
+++ b/client/public/assets/i18n/fr.json
@@ -68,7 +68,8 @@
                 "buttonText": "créer"
             },
             "haveAccount": "J'ai déjà un compte.",
-            "signinHere": "me connecter"
+            "signinHere": "me connecter",
+            "reqFields": "champs obligatoires"
         },
         "notFound": {
             "title": "erreur 404 : page non trouvée",
