--- a/client/public/assets/i18n/en.json
+++ b/client/public/assets/i18n/en.json
@@ -9,7 +9,14 @@
             "testLink": "test",
             "signinLink": "sign in"
         },
-        "cartBtnTitle": "cart"
+        "cartBtnTitle": "cart",
+        "productCard": {
+            "starting": "starting from",
+            "seeProduct": "see more"
+        },
+        "cartItem": {
+            "size": "{{size}}g Jar"
+        }
     },
     "pages": {
         "home": {
@@ -21,11 +28,7 @@
         },
         "detail": {
             "reviews": "See the {{reviewsNumber}} clients reviews",
-            "packages": {
-                "S": "{{size}}g Jar",
-                "M": "{{size}}g Jar",
-                "L": "{{size}}g Jar"
-            },
+            "package": "{{size}}g Jar",
             "addToCart": "add to cart",
             "addToWishList": "add to my wishlist",
             "smallDiscount": "Take advantage of 5% discount on the pack of 3 jars of 250g (already reduced price).",
