cart items total number & prices calculated, delete cart items

--- a/client/public/assets/i18n/bg.json
+++ b/client/public/assets/i18n/bg.json
@@ -15,7 +15,8 @@
             "seeProduct": "виж повече"
         },
         "cartItem": {
-            "size": "буркан {{size}} гр."
+            "size": "буркан {{size}} гр.",
+            "price": "/буркан"
         }
     },
     "pages": {
@@ -31,11 +32,14 @@
             "package": "буркан {{size}} гр.",
             "addToCart": "добави в количката",
             "addToWishList": "добави в любими",
-            "smallDiscount": "възползвайте се от 5% отстъпка върху пакета от 3 буркана по 250 гр. (цената е с включено намаление).",
-            "bigDiscount": "възползвайте се от 10% отстъпка върху пакета от 2 буркана по 500 гр. (цената е с включено намаление)."
+            "smallDiscount": "Възползвайте се от 5% отстъпка върху пакета от 3 буркана по 250 гр. (цената е с включено намаление).",
+            "bigDiscount": "Възползвайте се от 10% отстъпка върху пакета от 2 буркана по 500 гр. (цената е с включено намаление)."
         },
         "cart": {
-            "title": "Твоята количка"
+            "title": "Твоята количка",
+            "emptyCart": "твоята количка е празна",
+            "totalPrice": "общо:",
+            "taxNote": "Таксата за доставка ще бъде начислена при плащане"
         },
         "about": {
             "title": "за нас",
@@ -78,6 +82,11 @@
             "haveAccount": "вече имате профил?",
             "signinHere": "влезте тук",
             "reqFields": "задължителни полета"
+        },
+        "unauthorized": {
+            "title": "грешка 403: достъпът е отказан",
+            "text": "Съжаляваме! Вие нямате разрешение за достъп до тази страница. Върнете се на ",
+            "link": "начало"
         },
         "notFound": {
             "title": "грешка 404: страницата не е намерена",
